<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".todo.MainToDo"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/todoTitleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todoTitleField"
        android:textSize="26sp"
        android:inputType="text"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="#575656"
        android:autofillHints="name"
        />

    <EditText
        android:id="@+id/todoDescriptionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/todoDescField"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textColorHint="#575656"
        android:inputType="text"
        android:paddingTop="20dp"
        android:autofillHints="name"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/todoAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:text="@string/todoAddBtn"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todoRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/todo_item"
        />

</LinearLayout>